# duckdb-llm-extension

./: CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  sql_code_generator.rs
src/: query_assistant_extension.cpp  sql_code_generator.hpp
src/include/: query_assistant_extension.hpp
test/sql/: customers-100.csv  query_assistant.test
