[package]
name = "sql_assistant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"] # or "cdylib" if you want a shared library


[dependencies]
cxx = "1.0"
aho-corasick = "1.1.3"
anyhow = "1.0.98"
cbindgen = "0.28.0"
hf-hub = { version = "0.4.2", default-features = false, features = [
    "ureq",
    "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"
tracing = "0.1.41"
candle-examples = "0.9.1"
chat-templates = "0.3.0"

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }

[build-dependencies]
cxx-build = "1.0"
